--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "PrismaticaUI"]
 	path = PrismaticaUI
 	url = https://github.com/metaphaz/PrismaticaUI.git
+	branch = main
 [submodule "PrisimaticaAPI"]
 	path = PrisimaticaAPI
 	url = https://github.com/metaphaz/PrisimaticaAPI.git
